<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/coffeebackground2"
    android:orientation="vertical"
    tools:context="io.github.timladenov.interactiveapplication.MainActivity">

    <TextView
        android:id="@+id/lable"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/viewWeightHeight"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/marginTop1"
        android:fontFamily="@string/mainFont"
        android:text="@string/welcome"
        android:textColor="@color/primaryTxtColor"
        android:textSize="@dimen/pageTitleSize" />

    <TextView
        android:id="@+id/quantity_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/marginTop1"
        android:layout_marginStart="@dimen/marginTop1"
        android:layout_marginTop="@dimen/marginTop1"
        android:background="@color/mainBackgnd"
        android:fontFamily="@string/mainFont"
        android:paddingEnd="@dimen/marginTop1"
        android:paddingStart="@dimen/marginTop1"
        android:text="@string/quantity"
        android:textColor="@color/primaryTxtColor"
        android:textSize="@dimen/genericTxtSize"
        android:textStyle="bold" />

    <Button
        android:id="@+id/Button1"
        android:layout_width="@dimen/buttonsSize"
        android:layout_height="@dimen/buttonsSize"
        android:layout_gravity="end"
        android:layout_marginEnd="@dimen/marginTop1"
        android:layout_marginStart="@dimen/marginTop1"
        android:layout_marginTop="@dimen/marginTop1"
        android:alpha="0.8"
        android:fontFamily="@string/mainFont"
        android:onClick="onClick"
        android:text="@string/buttonTxt"
        android:textColor="@color/printButtonColor"
        android:textSize="@dimen/genericTxtSize" />

    <TextView
        android:id="@+id/quantity_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/marginTop1"
        android:layout_marginStart="@dimen/marginTop1"
        android:layout_marginTop="@dimen/marginTop1"
        android:background="@color/mainBackgnd"
        android:fontFamily="@string/mainFont"
        android:paddingEnd="@dimen/marginTop1"
        android:paddingStart="@dimen/marginTop1"
        android:text="@string/txtViewQuantity"
        android:textColor="@color/primaryTxtColor"
        android:textSize="@dimen/genericTxtSize"
        android:textStyle="bold" />

    <Button
        android:id="@+id/Button2"
        android:layout_width="@dimen/buttonsSize"
        android:layout_height="@dimen/buttonsSize"
        android:layout_gravity="end"
        android:layout_marginEnd="@dimen/marginTop1"
        android:layout_marginStart="@dimen/marginTop1"
        android:layout_marginTop="@dimen/marginTop1"
        android:alpha="0.8"
        android:fontFamily="@string/mainFont"
        android:onClick="onClickMinus"
        android:text="@string/buttonTxt2"
        android:textColor="@color/printButtonColor"
        android:textSize="@dimen/genericTxtSize" />

    <TextView
        android:id="@+id/price_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/marginTop1"
        android:layout_marginStart="@dimen/marginTop1"
        android:layout_marginTop="@dimen/marginTop1"
        android:background="@color/mainBackgnd"
        android:fontFamily="@string/mainFont"
        android:paddingEnd="@dimen/marginTop1"
        android:paddingStart="@dimen/marginTop1"
        android:text="@string/price"
        android:textColor="@color/primaryTxtColor"
        android:textSize="@dimen/genericTxtSize"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/price_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="@dimen/marginTop1"
        android:layout_marginStart="@dimen/marginTop1"
        android:layout_marginTop="@dimen/marginTop1"
        android:background="@color/mainBackgnd"
        android:fontFamily="@string/mainFont"
        android:paddingEnd="@dimen/marginTop1"
        android:paddingStart="@dimen/marginTop1"
        android:text="@string/pricedisplay"
        android:textColor="@color/primaryTxtColor"
        android:textSize="@dimen/priceSize"
        android:textStyle="bold" />

    <Button
        android:id="@+id/Button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="@dimen/marginTop1"
        android:layout_marginStart="@dimen/marginTop1"
        android:layout_marginTop="@dimen/marginTop1"
        android:alpha="0.8"
        android:fontFamily="@string/mainFont"
        android:onClick="onClickOrder"
        android:text="@string/buttonTxt3"
        android:textColor="@color/printButtonColor"
        android:textSize="@dimen/genericTxtSize" />
</LinearLayout>
